# arduino-stk

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  README.md  STK.md  library.json  library.properties
docs/html/: ADSR_8h_source.html  ArdBtSource_8h_source.html  ArdCommonOut_8h_source.html  ArdConfig_8h_source.html  ArdI2SOut_8h_source.html  ArdMidiVoicer_8h_source.html  ArdStkLogger_8h_source.html  ArdStkMidiAction_8h_source.html  ArdStreamBinaryOut_8h_source.html  ArdStreamHexOut_8h_source.html  ArdStreamOutCommon_8h_source.html  ArdStreamOut_8h_source.html  ArdStreamTextOut_8h_source.html  ArdUdp_8h_source.html  Asymp_8h_source.html  BandedWG_8h_source.html  BeeThree_8h_source.html  BiQuad_8h_source.html  BlitSaw_8h_source.html  BlitSquare_8h_source.html  Blit_8h_source.html  BlowBotl_8h_source.html  BlowHole_8h_source.html  BowTable_8h_source.html  Bowed_8h_source.html  Brass_8h_source.html  Chorus_8h_source.html  Clarinet_8h_source.html  Cubic_8h_source.html  DelayA_8h_source.html  DelayL_8h_source.html  Delay_8h_source.html  Drummer_8h_source.html  Echo_8h_source.html  Effect_8h_source.html  Envelope_8h_source.html  FMVoices_8h_source.html  FM_8h_source.html  FileLoop_8h_source.html  FileRead_8h_source.html  (+350 more)
examples/FileLoop/: FileLoop.ino
examples/HelloSine/: HelloSine.ino
examples/Instrument/: CMakeLists.txt  Instrument.ino
examples/InstrumentToAudioToolsI2S/: InstrumentToAudioToolsI2S.ino
examples/InstrumentToI2S/: InstrumentToI2S.ino
examples/MemoryLoop/: MemoryLoop.ino
examples/MidiBLEClient/: MidiBLEClient.ino
examples/MidiBLEServer/: MidiBLEServer.ino
examples/MidiFromSerial/: MidiFromSerial.ino
examples/MidiFromUDP/: MidiFromUDP
examples/MidiToIP/: MidiToIP.ino
examples/MidiToUDP/: MidiToUDP.ino
rawwaves/: sine.c
src/: ADSR.cpp  ADSR.h  ArdBtSource.cpp  ArdBtSource.h  ArdCommonOut.cpp  ArdCommonOut.h  ArdCompatibility.h  ArdConfig.cpp  ArdConfig.h  ArdI2SOut.cpp  ArdI2SOut.h  ArdMidiBleClient.cpp  ArdMidiBleClient.h  ArdMidiBleEventHandler.cpp  ArdMidiBleEventHandler.h  ArdMidiBleServer.cpp  ArdMidiBleServer.h  ArdMidiCommon.cpp  ArdMidiCommon.h  ArdMidiEventHandler.cpp  ArdMidiEventHandler.h  ArdMidiStreamIn.cpp  ArdMidiStreamIn.h  ArdMidiStreamOut.cpp  ArdMidiStreamOut.h  ArdStkLogger.cpp  ArdStkLogger.h  ArdStkMidiAction.h  ArdStreamBinaryOut.cpp  ArdStreamBinaryOut.h  ArdStreamHexOut.cpp  ArdStreamHexOut.h  ArdStreamOut.cpp  ArdStreamOut.h  ArdStreamOutCommon.cpp  ArdStreamOutCommon.h  ArdStreamTextOut.cpp  ArdStreamTextOut.h  ArdUdp.cpp  ArdUdp.h  (+211 more)
(+64 files in other folders)
